# hal9000

./: .env.EXAMPLE  .gitattributes  .gitignore  LICENSE  README.md  STT.py  TTS.py  XTTS.py  api-test.py  faster-whisper.py  llm-server.py  main.py  pyproject.toml  requirements.txt
StyleTTS/: models.py  text_utils.py
StyleTTS/Modules/: utils.py
StyleTTS/Utils/JDC/: model.py
XTTS/: config.json  model.pth
src/: STT.py  TTS.py  llm-server.py  llm_server.py  main.py
src/LLM/: client.py  controller.py  llm_utils.py
src/MCP/: client.py  controller.py
src/MCP/mcp_servers/mcp_weather/: server.py
src/MCP/mcp_servers/mcp_websearch/: server.py
src/MCP/mcp_time/: server.py
src/MCP/mcp_websearch/: server.py
src/StyleTTS/: app.py  models.py  msinference.py  utils.py
src/StyleTTS/Modules/: discriminators.py  hifigan.py  istftnet.py
src/StyleTTS/Utils/ASR/: layers.py  models.py
src/TextualUI/: STT_tui.py  TTS_tui.py  hal9000.tcss  tui.py
tests/: test_STT.py  test_TTS.py  test_client.py  test_controller.py  test_llm_server.py
voice_dataset/: metadata_train.csv
