[project]
name = "hal9000"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "einops-exts>=0.0.4",
    "fastapi[standard]>=0.116.0",
    "faster-whisper>=1.2.0",
    "ipython>=9.4.0",
    "librosa>=0.11.0",
    "mcp[cli]>=1.12.0",
    "munch>=4.0.0",
    "nltk>=3.9.1",
    "numba>=0.61.2",
    "nvidia-cublas-cu12>=12.6.4.1",
    "nvidia-cudnn-cu12==9.*",
    "ollama>=0.5.1",
    "phonemizer>=3.3.0",
    "pyaudio>=0.2.14",
    "pynput>=1.8.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "rich>=13.9.4",
    "scipy>=1.16.0",
    "setuptools==80.8.0",
    "spacy>=3.8.7",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.2",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.28.1",
    "fastapi-mcp>=0.3.7",
    "pydantic>=2.11.7",
    "tzdata>=2025.2",
    "tzlocal>=5.3.1",
    "fastmcp>=2.11.0",
    "ddgs>=9.5.1",
    "readability-lxml>=0.8.4.1",
    "lxml>=6.0.0",
    "beautifulsoup4>=4.13.4",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "textual>=5.3.0",
    "textual-dev>=1.7.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
